--- a/about.html
+++ b/about.html
@@ -33,9 +33,7 @@
             my journey wasnt always easy. i have came over alot to be where i'm today. i was born in somalia at a time of civil war. i grew up in a small city in somalia called kismayo. as the time went by, we managed to flee and fortunely we ended up in usa. i'd to learn english very quickly in order for me to adapt which i did. i made new friends and life have been good since then. i play few sports in my leasure time and soccer is in my DNA.  
             </p>
             <p>i've always wanted to create something unique and i think this career path will lead me to that. i understand its going to be hard and challenging task but im for it and i will try by best to learn as much as i can.
-                its never easy to start something new, but i know i can do it. in a nutshell, i decided to take this career path in order to understand the world of tech and apps.
-           
-            </p>
+                its never easy to start something new, but i know i can do it. in a nutshell, i decided to take this career path in order to understand the world of tech and apps
 
             </p>
         </div>
