--- a/basic-porfolio./about.html
+++ b/basic-porfolio./about.html
@@ -5,7 +5,7 @@
     <meta name="viewpoint" content="width=devise-width">
     <meta name="author" content="Abdullahi Aideed">
     <title>Abdullahi Aideed | Welcome</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="porfolio.html">porfolio</a></li>
+                    <li><a href="portfolio.html">porfolio</a></li>
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
@@ -27,13 +27,20 @@
 
     <section id="showcase">
         <div class="container">
-            <h1>Welcome to Abdullahi Aideed's Web page</h1>
+            <h1>About me</h1>
             <p> As you can see, i go by the name Abdullahi Aideed. my current proffesion is a soccer coach. i have been doing coaching for the past three years. its a lovely profession but its time for me to try something new.</p>
+            <p>
+            my journey wasnt always easy. i have came over alot to be where i'm today. i was born in somalia at a time of civil war. i grew up in a small city in somalia called kismayo. as the time went by, we managed to flee and fortunely we ended up in usa. i'd to learn english very quickly in order for me to adapt which i did. i made new friends and life have been good since then. i play few sports in my leasure time and soccer is in my DNA.  
+            </p>
+            <p>i've always wanted to create something unique and i think this career path will lead me to that. i understand its going to be hard and challenging task but im for it and i will try by best to learn as much as i can.
+                its never easy to start something new, but i know i can do it. in a nutshell, i decided to take this career path in order to understand the world of tech and apps
+
+            </p>
         </div>
     </section>
     <section>
         <div class="images">
-        <img src="../img/myphoto.jpg">
+        <img src="./img/aideed2.jpg">
         </div>
     </section>
 
