--- a/index.html
+++ b/index.html
@@ -1,81 +1,36 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewpoint" content="width=devise-width">
-    <meta name="author" content="Abdullahi Aideed">
-    <title>Abdullahi Aideed | Welcome</title>
-    <link rel="stylesheet" href="css/style.css">
-
+  <meta charset="UTF-8">
+  <title>About | Abdullahi Aideed</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <div class="container">
-            <div id="branding">
-                <h1>Abdullahi Aideed</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="portfolio.html">porfolio</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                </ul>
-            </nav>
-        
-        </div>
-    </header>
 
-    <section id="showcase">
-        <div class="container">
-            <h1>About me</h1>
-            <p> As you can see, i go by the name Abdullahi Aideed. my current proffesion is a soccer coach. i have been doing coaching for the past three years. its a lovely profession but its time for me to try something new.</p>
-            <p>
-            my journey wasnt always easy. i have came over alot to be where i'm today. i was born in somalia at a time of civil war. i grew up in a small city in somalia called kismayo. as the time went by, we managed to flee and fortunely we ended up in usa. i'd to learn english very quickly in order for me to adapt which i did. i made new friends and life have been good since then. i play few sports in my leasure time and soccer is in my DNA.  
-            </p>
-            <p>i've always wanted to create something unique and i think this career path will lead me to that. i understand its going to be hard and challenging task but im for it and i will try by best to learn as much as i can.
-                its never easy to start something new, but i know i can do it. in a nutshell, i decided to take this career path in order to understand the world of tech and apps.
-           
-            </p>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-            </p>
-        </div>
-    </section>
-    <section>
-        <div class="images">
-        <img src="./img/aideed2.jpg">
-        </div>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="./img/aideed2.jpg">
+      <p>As you can see, i go by the name Abdullahi Aideed. my current proffesion is a soccer coach. i have been doing coaching for the past three years. its a lovely profession but its time for me to try something new.</p>
+
+      <p>i've always wanted to create something unique and i think this career path will lead me to that. i understand its going to be hard and challenging task but im for it and i will try by best to learn as much as i can.
+        its never easy to start something new, but i know i can do it. in a nutshell, i decided to take this career path in order to understand the world of tech and apps.</p>
+
     </section>
 
-    <section id="newsletter">
-        <div class="container">
-            <h1>subscribe to my newsletter</h1>
-            <form>
-                <input type="email" placeholder="Enter Email.."
-                <button type="submit" class="button_1">subcsribe</button>
-            </form>
-        </div>
-    </section>
-
-    <section id="boxes">
-        <div class="container">
-
-        </div>
-    </section>
-
-<footer>
-    <p> Abdullahi Aideed, Copyright &copy; 2018 </p>
-</footer>
-
-
-
-
-
-
-
-
-
-</body>
-
-
-
-</html>
+  </div>
