--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your name</a>
+      <a href="index.html" id="logo">Abdullahi Aideed</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
